--- a/_config.yml
+++ b/_config.yml
@@ -293,8 +293,8 @@ display_categories: ["blockquotes"] # these categories will be displayed on the 
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Chaudhari]
+  first_name: [Harsh]
 
   style: apa
   locale: en
