--- a/_config.yml
+++ b/_config.yml
@@ -243,6 +243,7 @@ plugins:
   - jekyll-feed
   - jekyll-get-json
   - jekyll-imagemagick
+  - jekyll-jupyter-notebook
   - jekyll-minifier
   - jekyll-paginate-v2
   - jekyll/scholar
